@@ -1,6 +1,10 @@
 
   == 0.8 or afterwards ==
 
+ * in libipodsync.py: use mime magic instead of extension-based 
+   video detection? --> also, is mp4 always video or could it be 
+   aac audio too? if so, how to check what is what?
+
  * The only thing that I can't seem to find is the ability to have 
    gpodder only download the latest podcast when running it at the 
    command line (gpodder -r).  Currently after subscribing to a cast 
