@@ -1,3 +1,8 @@
+Fri, 09 Jun 2006 12:37:54 +0200 <thp@perli.net>
+	* Applied a modified version of Camille's patch to get videos 
+	  (mov, mp4, m4v) working with iPod video devices on sync -
+	  can anyone w/ a video iPod test this if it's working?
+
 Thu, 08 Jun 2006 23:58:49 +0200 <thp@perli.net>
 	* Fixed a bug where a "&" character in the channels list would 
 	  result in gPodder to crash - thanks to Gaim Roitgrund for 
